--- a/public/project/views/user/templates/cinema/movieDetails.view.client.html
+++ b/public/project/views/user/templates/cinema/movieDetails.view.client.html
@@ -4,7 +4,7 @@
 <header class="site-header">
 <div class="container">
 <a href="../home.html" id="branding">
-<img src="" alt="" class="logo">
+<img src="https://raw.githubusercontent.com/vaibhavkarnam/karnam-vaibhav-webdev1/master/public/project/images/logo.png" alt="" class="logo">
 <div class="logo-copy">
 <h1 class="site-title">CINEREVIEW</h1>
 <small class="site-description">Explore Hollywood!</small>
