--- a/public/project/views/user/templates/cinema/review-update.view.client.html
+++ b/public/project/views/user/templates/cinema/review-update.view.client.html
@@ -2,7 +2,7 @@
 <header class="site-header">
 <div class="container">
 <a href="../home.html" id="branding">
-<img src="../../../vendor/images/logo.png" alt="" class="logo">
+<img src="https://raw.githubusercontent.com/vaibhavkarnam/karnam-vaibhav-webdev1/master/public/project/images/logo.png" alt="" class="logo">
 <div class="logo-copy">
 <h1 class="site-title">Company Name</h1>
 <small class="site-description">Tagline goes here</small>
