--- a/public/project/views/user/templates/users/login.view.client.html
+++ b/public/project/views/user/templates/users/login.view.client.html
@@ -23,8 +23,8 @@
 
 	<div class="content">
 		<div ng-show="model.message" class="alert alert-info">{{model.message}}</div>
-		<div ng-show="model.errorMessage" class="alert alert-danger">
-			{{model.errorMessage}}
+		<div ng-show="model.error" class="alert alert-danger">
+			{{model.error}}
 		</div>
 		<h1>Login</h1>
 		<label for="username">
