--- a/public/project/views/templates/cinema/movieDetails.view.client.html
+++ b/public/project/views/templates/cinema/movieDetails.view.client.html
@@ -122,7 +122,7 @@
 </div>
 <div class="tab-content" ng-show="selectedTab == 2">
 	<div ng-repeat="review in model.userReviews">
-		<span class="glyphicon glyphicon-user"></span> USER :<a ng-click="model.getProfile(review._userId)" class="btn btn-link">
+		<span class="glyphicon glyphicon-user"></span> USER :<a href="#!/profile" class="btn btn-link">
 		{{review.user_name}}</a>
 		</h4>
 		<p>{{review.description}}</p>
