--- a/public/project/views/templates/cinema/movieDetails.view.client.html
+++ b/public/project/views/templates/cinema/movieDetails.view.client.html
@@ -37,7 +37,7 @@
 <div class="container">
 <div class="page">
 <div class="breadcrumbs">
-<a href="../home.html">Home</a>
+<a href="#!/">Home</a>
 <span>{{model.movie.Title}}</span>
 </div>
 
