--- a/public/project/views/templates/users/profile-visit.view.client.html
+++ b/public/project/views/templates/users/profile-visit.view.client.html
@@ -35,7 +35,7 @@
 <div class="container">
 <div class="page">
 <div class="breadcrumbs">
-<a href="../home.html">Home</a>
+<a href="#!/">Home</a>
 <span>Profile Visit</span>
 </div>
 
@@ -62,7 +62,7 @@
     <li ng-class="{active: selectedTab == 3}">
         <a data-target="#" ng-click="selectedTab = 3;">Following</a>
     </li>
-    <li ng-class="{active: selectedTab == 3}">
+    <li ng-class="{active: selectedTab == 4}">
         <a data-target="#" ng-click="selectedTab = 4;">Followers</a>
     </li>
 </ul>
