--- a/public/project/views/templates/users/profile.view.client.html
+++ b/public/project/views/templates/users/profile.view.client.html
@@ -1,7 +1,7 @@
 <div id="site-content">
 <header class="site-header">
 <div class="container">
-<a href="../home.html" id="branding">
+<a href="#!/" id="branding">
 <img src="https://raw.githubusercontent.com/vaibhavkarnam/karnam-vaibhav-webdev1/master/public/project/images/logo.png" alt="" class="logo">
 <div class="logo-copy">
 <h1 class="site-title">CINEREVIEW</h1>
@@ -36,7 +36,7 @@
 <div class="container">
 <div class="page">
 <div class="breadcrumbs">
-<a href="../home.html">Home</a>
+<a href="#!/">Home</a>
 <span>Profile</span>
 </div>
 
@@ -66,7 +66,7 @@
                 <li ng-class="{active: selectedTab == 3}">
                     <a data-target="#" ng-click="selectedTab = 3;">Following</a>
                 </li>
-                <li ng-class="{active: selectedTab == 3}">
+                <li ng-class="{active: selectedTab == 4}">
                     <a data-target="#" ng-click="selectedTab = 4;">Followers</a>
                 </li>
             </ul>
