--- a/public/project/views/templates/cinema/review-update.view.client.html
+++ b/public/project/views/templates/cinema/review-update.view.client.html
@@ -19,11 +19,11 @@
 <div>
 <div class="collapse navbar-collapse navbar-right" id="myNavbar">
 <ul class="nav navbar-nav">
-    <li><a ng-show="!model.user._id" href="#!/login">Login</a></li>
-    <li><a ng-show="!model.user._id" href="#!/register">Register</a></li>
-    <li><a ng-show="model.user._id" href="#!/profile">Profile</a></li>
-    <li><a ng-show="model.user._id" ng-click="model.logout()">logout</a></li>
-    <li><a href="#!/">BACK</a></li>
+<li><a ng-show="!model.user._id" href="#!/login">Login</a></li>
+<li><a ng-show="!model.user._id" href="#!/register">Register</a></li>
+<li><a ng-show="model.user._id" href="#!/profile">Profile</a></li>
+<li><a ng-show="model.user._id" ng-click="model.logout()">logout</a></li>
+<li><a href="#!/">BACK</a></li>
 </ul>
 </div>
 </div><!-- .main-navigation -->
@@ -35,7 +35,7 @@
 <div class="container">
 <div class="page">
 <div class="breadcrumbs">
-<a href="../home.html">Home</a>
+<a href="#!/">Home</a>
 <span>Update Review</span>
 </div>
 
@@ -43,15 +43,15 @@
 <!-- note: your server code `avatar_upload.php` will receive `$_FILES['avatar']` on form submission -->
 <!-- the avatar markup -->
 <div class="col-lg=5 col-md-5">
-    <div class="form-group">
+<div class="form-group">
 
-        <textarea type="text" class="form-control" ng-model="model.reviewForUpdate.description"
-                 rows="8" laceholder="Description"></textarea>
-    </div>
+<textarea type="text" class="form-control" ng-model="model.reviewForUpdate.description"
+         rows="8" laceholder="Description"></textarea>
+</div>
 
 </div>
-    <button type="button" class="btn btn-success"
-            ng-click="model.reviewUpdate(model.reviewForUpdate._id,model.reviewForUpdate)">Update</button>
+<button type="button" class="btn btn-success"
+    ng-click="model.reviewUpdate(model.reviewForUpdate._id,model.reviewForUpdate)">Update</button>
 
 
 
