--- a/public/project/views/templates/users/register.view.client.html
+++ b/public/project/views/templates/users/register.view.client.html
@@ -17,7 +17,7 @@
         <div class="container">
             <div class="page">
                 <div class="breadcrumbs">
-                    <a href="../home.html">Home</a>
+                    <a href="#!/">Home</a>
                     <span>Register</span>
                 </div>
 
