--- a/public/project/views/templates/users/profile.view.client.html
+++ b/public/project/views/templates/users/profile.view.client.html
@@ -19,12 +19,12 @@
 <div>
 <div class="collapse navbar-collapse navbar-right" id="myNavbar">
 <ul class="nav navbar-nav">
-    <li><a ng-show="model.user.role[0] == 'ADMIN'" href="#!/admin">ADMIN</a></li>
-    <li><a ng-show="!model.user._id" href="#!/login">Login</a></li>
-    <li><a ng-show="!model.user._id" href="#!/register">Register</a></li>
-    <li><a ng-show="model.user._id" ng-click="model.logout()">logout</a></li>
-    <li><a href="#!/">Search Movies</a></li>
-    <li><a href="#!/">BACK</a></li>
+<li><a ng-show="model.user.role[0] == 'ADMIN'" href="#!/admin">ADMIN</a></li>
+<li><a ng-show="!model.user._id" href="#!/login">Login</a></li>
+<li><a ng-show="!model.user._id" href="#!/register">Register</a></li>
+<li><a ng-show="model.user._id" ng-click="model.logout()">logout</a></li>
+<li><a href="#!/">Search Movies</a></li>
+<li><a href="#!/">BACK</a></li>
 </ul>
 </div>
 </div> <!-- .main-navigation -->
@@ -46,123 +46,127 @@
 <div id="kv-avatar-errors-2" class="center-block"></div>
 <form class="form form-vertical" action="/api/upload/project" method="post" enctype="multipart/form-data">
 <div class="row">
-    <div class="col-sm-4" id="profilebtn">
-        <div class="kv-avatar center-block text-center" style="width:200px">
-            <img ng-src="{{model.user.ProfilePic}}">
-            <input id="avatar-2" name="avatar-2" type="file" class="file-loading" required>
-            <input  name="userId"    value="{{model.userId}}"   style="display: none"/>
-            <button type="submit"    class="btn btn-sucess btn-block">Upload Profile Pic</button>
+<div class="col-sm-4" id="profilebtn">
+<div class="kv-avatar center-block text-center" style="width:200px">
+<img ng-src="{{model.user.ProfilePic}}">
+<input id="avatar-2" name="avatar-2" type="file" class="file-loading" required>
+<input  name="userId"    value="{{model.userId}}"   style="display: none"/>
+<button type="submit"    class="btn btn-sucess btn-block">Upload Profile Pic</button>
+</div>
+</div>
+<div class="col-sm-8">
+<div class="tabbable tabs-below" ng-init="selectedTab = 1;">
+<ul class="nav nav-tabs nav-justified">
+    <li ng-class="{active: selectedTab == 1}">
+        <a data-target="#" ng-click="selectedTab = 1;">Reviews</a>
+    </li>
+    <li ng-class="{active: selectedTab == 2}">
+        <a data-target="#" ng-click="selectedTab = 2;">Profile</a>
+    </li>
+    <li ng-class="{active: selectedTab == 3}">
+        <a data-target="#" ng-click="selectedTab = 3;">Following</a>
+    </li>
+    <li ng-class="{active: selectedTab == 4}">
+        <a data-target="#" ng-click="selectedTab = 4;">Followers</a>
+    </li>
+</ul>
+
+<div class="tab-content" ng-show="selectedTab == 1">
+    <div ng-repeat="userReviews in model.allUserReviews">
+        <a ng-click="model.reviewDelete(userReviews._id)" class="btn btn-danger btn-sm pull-right">
+            <i class="fa fa-trash " aria-hidden="true"></i>
+        </a>
+        <a  id = "glyph" href="#!/movies/reviewUpdate/{{userReviews._id}}" class="btn btn-primary btn-sm pull-right">
+            <i class="fa fa-pencil " aria-hidden="true"></i>
+        </a>
+        <h5>Title :
+
+            <a href="#!/user/movies/{{userReviews.movieID}}" class="btn btn-link"> {{userReviews.moviename}}</a></h5>
+            <h5>
+            <a ng-show="model.user.role[0] == 'CRITIC'" ng-click="model.reviewDownVote(userReviews._id)">
+                <span id ="profiledown" class="glyphicon glyphicon-thumbs-down pull-right">{{userReviews.dislike.length}}</span>
+            </a>
+            <a ng-show="model.user.role[0] == 'CRITIC'" ng-click="model.reviewUpVote(userReviews._id)">
+                <span id ="thumbsup" class="glyphicon glyphicon-thumbs-up pull-right"> {{userReviews.thumbsUp.length}}</span>
+            </a></h5>
+
+        Description : {{userReviews.description}}
+        <hr>
+    </div>
+</div>
+
+<div class="tab-content" ng-show="selectedTab == 2">
+    <form>
+        <div class="form-group">
+            <label for="username">Username</label>
+            <input type="text" ng-model="model.user.username" class="form-control" id="username" placeholder="vaibhav">
+        </div>
+        <div class="form-group">
+            <label for="email">Email address</label>
+            <input type="email" ng-model="model.user.email" class="form-control" id="email" placeholder="vaibhav@gmail.com">
+        </div>
+        <div class="form-group">
+            <label for="first-name">First Name</label>
+            <input type="text" ng-model="model.user.firstName" class="form-control" id="first-name" placeholder="vaibhav">
+        </div>
+        <div class="form-group">
+            <label for="last-name">Last Name</label>
+            <input type="text" ng-model="model.user.lastName" class="form-control" id="last-name" placeholder="karnam">
+        </div>
+
+    </form>
+    <a class="btn btn-danger  btn-block"
+       href="#!/login">
+        Logout</a>
+    <a class="btn btn-default btn-danger btn-block"
+       ng-click="model.unregister()"
+       role="button">Unregister</a>
+
+    <a class="btn btn-default btn-primary btn-block"
+       ng-click="model.updateUser()"
+       role="button">Update</a>
+</div>
+</div>
+<div class="tab-content" ng-show="selectedTab == 3">
+
+    <a class="btn btn-default btn-primary btn-block"
+       ng-click="model.findAllUsers()"
+       role="button" id="proflieUser">Find Users to Follow</a>
+    <div class="container-fluid" ng-repeat="user in model.users">
+
+        <h5>  Username : <a href="#!/profile/visitor/{{user._id}}">{{user.username}}</a> </h5>
+        <h5> Role : {{user.role[0]}}</h5>
+        <hr></div>
+
+    <div class="panel-heading">
+        <div class="container-fluid"><h4><b>{{model.user.username}}</b>'s following:</h4>
         </div>
     </div>
-    <div class="col-sm-8">
-        <div class="tabbable tabs-below" ng-init="selectedTab = 1;">
-            <ul class="nav nav-tabs nav-justified">
-                <li ng-class="{active: selectedTab == 1}">
-                    <a data-target="#" ng-click="selectedTab = 1;">Reviews</a>
-                </li>
-                <li ng-class="{active: selectedTab == 2}">
-                    <a data-target="#" ng-click="selectedTab = 2;">Profile</a>
-                </li>
-                <li ng-class="{active: selectedTab == 3}">
-                    <a data-target="#" ng-click="selectedTab = 3;">Following</a>
-                </li>
-                <li ng-class="{active: selectedTab == 4}">
-                    <a data-target="#" ng-click="selectedTab = 4;">Followers</a>
-                </li>
-            </ul>
+    <div class="panel-body">
+        <div class="alert alert-danger"  ng-if="(model.UsersFollowing).length < 1">Following list empty</div>
+        <div ng-repeat="user in model.UsersFollowing">
 
-            <div class="tab-content" ng-show="selectedTab == 1">
-                <div ng-repeat="userReviews in model.allUserReviews">
-                    <a ng-click="model.reviewDelete(userReviews._id)" class="btn btn-danger btn-sm pull-right">
-                        <i class="fa fa-trash " aria-hidden="true"></i>
-                    </a>
-                    <a  href="#!/movies/reviewUpdate/{{userReviews._id}}" class="btn btn-primary btn-sm pull-right">
-                        <i class="fa fa-pencil " aria-hidden="true"></i>
-                    </a>
-                    <h5>Movie :
-                        <a href="#!/user/movies/{{userReviews.movieID}}" class="btn btn-link"> {{userReviews.moviename}}</a></h5>
-                        <h4>
-                        <a ng-show="model.user.role[0] == 'CRITIC'" ng-click="model.reviewDownVote(review._id)">
-                            <i class="fa fa-thumbs-down pull-right" aria-hidden="true"> {{userReviews.dislike.length}}</i>
-                        </a>
-                        <a ng-show="model.user.role[0] == 'CRITIC'" ng-click="model.reviewUpVote(review._id)">
-                            <i class="fa fa-thumbs-up pull-right" aria-hidden="true"> {{userReviews.thumbsUp.length}}</i>
-                        </a>
-                    </h4>
-                    Description : {{userReviews.description}}
-                    <hr>
-                </div>
-            </div>
-
-            <div class="tab-content" ng-show="selectedTab == 2">
-                <form>
-                    <div class="form-group">
-                        <label for="username">Username</label>
-                        <input type="text" ng-model="model.user.username" class="form-control" id="username" placeholder="vaibhav">
-                    </div>
-                    <div class="form-group">
-                        <label for="email">Email address</label>
-                        <input type="email" ng-model="model.user.email" class="form-control" id="email" placeholder="vaibhav@gmail.com">
-                    </div>
-                    <div class="form-group">
-                        <label for="first-name">First Name</label>
-                        <input type="text" ng-model="model.user.firstName" class="form-control" id="first-name" placeholder="vaibhav">
-                    </div>
-                    <div class="form-group">
-                        <label for="last-name">Last Name</label>
-                        <input type="text" ng-model="model.user.lastName" class="form-control" id="last-name" placeholder="karnam">
-                    </div>
-
-                </form>
-                <a class="btn btn-danger  btn-block"
-                   href="#!/login">
-                    Logout</a>
-                <a class="btn btn-default btn-danger btn-block"
-                   ng-click="model.unregister()"
-                   role="button">Unregister</a>
-
-                <a class="btn btn-default btn-primary btn-block"
-                   ng-click="model.updateUser()"
-                   role="button">Update</a>
-            </div>
-        </div>
-            <div class="tab-content" ng-show="selectedTab == 3">
-
-                <a class="btn btn-default btn-primary btn-block"
-                   ng-click="model.findAllUsers()"
-                   role="button" id="proflieUser">Find Users to Follow</a>
-                <div class="container-fluid" ng-repeat="user in model.users">
-                    <h4>  Username : <a href="#!/profile/visitor/{{user._id}}">{{user.username}}</a> </h4>
-                    <h4> Role : {{user.role[0]}}</h4>
-                    <hr>
-                </div>
-                <div class="panel-heading">
-                    <div class="container-fluid"><h4><b>{{model.user.username}}</b> is following:</h4>
-                    </div>
-                </div>
-                <div class="panel-body">
-                    <div class="alert alert-danger"  ng-if="(model.UsersFollowing).length < 1"> Not following anyone yet !!! </div>
-                    <div ng-repeat="user in model.UsersFollowing">
-                        <h4> Username : <a href="#!/profile/visitor/{{user._id}}"> {{user.username}}</a></h4>
-                        <h4> Role : {{user.role[0]}}</h4>
-                        <hr>
-                    </div>
-                </div>
-            </div>
-            <div class="tab-content" ng-show="selectedTab == 4">
-                <div class="panel-heading">
-                    <div class="container-fluid"><h4>Users following <b>{{model.user.username}}</b>:</h4>
-                    </div>
-                </div>
-                <div class="panel-body">
-                    <div class="alert alert-danger"  ng-if="(model.UsersFollowers).length < 1"> No followers yet! </div>
-                    <div ng-repeat="follower in model.UsersFollowers">
-                        <h4> Username : <a href="#!/profile/visitor/{{follower._id}}">{{follower.username}}</a></h4>
-                        <h4> Role : {{follower.role[0]}}</h4>
-                    </div>
-                </div>
+            <h5> Username : <a href="#!/profile/visitor/{{user._id}}"> {{user.username}}
+            </a></h5>
+            <h5> Role : {{user.role[0]}}
+            </h5>
+            <hr></div>
+    </div>
+</div>
+<div class="tab-content" ng-show="selectedTab == 4">
+    <div class="panel-heading">
+        <div class="container-fluid"><h4><b>{{model.user.username}}</b>'s Followers:</h4>
         </div>
     </div>
+    <div class="panel-body">
+        <div class="alert alert-danger"  ng-if="(model.UsersFollowers).length < 1">Followers's list empty</div>
+        <div ng-repeat="follower in model.UsersFollowers">
+
+            <h5> Username : <a href="#!/profile/visitor/{{follower._id}}">{{follower.username}}</a></h5>
+            <h5> Role : {{follower.role[0]}}</h5></div>
+    </div>
+</div>
+</div>
 </div>
 </form>
 
