--- a/public/project/views/templates/admin/admin.view.client.html
+++ b/public/project/views/templates/admin/admin.view.client.html
@@ -53,14 +53,17 @@
 
 <div class="tab-content" ng-show="selectedTab == 1">
 <div ng-show="model.users.length == 0">
-<h3>No Users have Signed Up</h3>
+<h3>No Users have Regsitered yet!</h3>
 </div>
 <div id="adminUserSection" ng-repeat="user in model.foundUsers">
 <div class="row">
-<div class="col-xs-4 col-md-1">
-    <image id="adminUserImage" ng-src="{{user.ProfilePic}}"></image>
+
+    <div class="col-xs-4 col-md-1">
+    <image ng-src="{{user.ProfilePic}}">
+
+    </image>
 </div>
-<div id="adminUsers" class="col-xs-8 col-md-11">
+<div class="col-xs-8 col-md-11">
     <form>
         <div class="form-group">
             <label>Username</label>
@@ -83,13 +86,16 @@
         </div>
     </form>
     <div>
-        <button id="deleteAdminButton" ng-click="model.unregister(user._id)"
+
+        <button ng-click="model.unregister(user._id)"
                 class="btn btn-block btn-danger">Delete User
         </button>
     </div>
-    <button id="editAdminButton" ng-click="model.updateUser(user)"
+    <button ng-click="model.updateUser(user)"
             class="btn btn-block btn-success">Update User
     </button>
+
+
 </div>
 </div>
 <hr>
@@ -142,43 +148,58 @@ role="alert">
 <form>
 <div class="form-group">
 <label>First Name</label>
+
 <input ng-model="user.firstName"
-       type="text"
-       required
-       class="form-control"
-       placeholder="First Name">
+type="text"
+required
+class="form-control"
+placeholder="First Name">
+
 </div>
+
 <label>Last Name</label>
+
 <div class="form-group">
+
 <input ng-model="user.lastName"
-       type="text"
-       class="form-control"
-       required placeholder="Last Name">
+type="text"
+class="form-control"
+required placeholder="Last Name">
 </div>
+
 <div class="form-group">
+
 <label>Username</label>
+
 <input ng-model="user.username"
-       type="text"
-       class="form-control"
-       required placeholder="Username">
+type="text"
+class="form-control"
+required placeholder="Username">
 </div>
+
 <div class="form-group">
+
 <label>Email</label>
+
 <input ng-model="user.email"
-       type="email"
-       class="form-control"
-       required placeholder="Email Address">
+type="email"
+class="form-control"
+required placeholder="Email Address">
 </div>
+
 <div class="form-group">
+
 <label>Password</label>
+
 <input ng-model="user.password"
-       type="password"
-       class="form-control"
-       required placeholder="Password">
+type="password"
+class="form-control"
+required placeholder="Password">
 </div>
+
 <button type="submit"
-    ng-click="model.register(user)"
-    class="btn btn-block btn-primary">Create User
+ng-click="model.register(user)"
+class="btn btn-block btn-primary">Create User
 </button>
 </form>
 </div>
