--- a/public/project/views/templates/users/profile-visit.view.client.html
+++ b/public/project/views/templates/users/profile-visit.view.client.html
@@ -47,7 +47,7 @@
 <div class="row">
 <div class="col-sm-4">
 <div class="kv-avatar center-block text-center" style="width:200px">
-<img ng-src="{{model.user.ProfilePic}}">
+<img ng-src="{{model.user.ProfilePic}}" alt="../../images/avatarimg.png">
 </div>
 </div>
 <div class="col-sm-8">
