--- a/public/project/views/templates/users/profile.view.client.html
+++ b/public/project/views/templates/users/profile.view.client.html
@@ -48,7 +48,7 @@
 <div class="row">
 <div class="col-sm-4" id="profilebtn">
 <div class="kv-avatar center-block text-center" style="width:200px">
-<img ng-src="{{model.user.ProfilePic}}" alt="../../images/avatarimg.png">
+<img ng-src="{{model.user.ProfilePic}}" src="{{model.user.ProfilePic}}">
 <input id="avatar-2" name="avatar-2" type="file" class="file-loading" required>
 <input  name="userId"    value="{{model.userId}}"   style="display: none"/>
 <button type="submit"    class="btn btn-sucess btn-block">Upload Profile Pic</button>
