--- a/public/project/views/templates/admin/admin.view.client.html
+++ b/public/project/views/templates/admin/admin.view.client.html
@@ -69,7 +69,8 @@
             <label>Username</label>
             <input ng-model="user.username"
                    type="email"
-                   class="form-control">
+                   class="form-control"
+                   disabled>
         </div>
         <div class="form-group">
             <label>First Name</label>
@@ -111,13 +112,15 @@
     <input ng-model="review.moviename"
            type="text"
            required
-           class="form-control">
+           class="form-control"
+           disabled>
 </div>
 <div class="form-group">
     <label>Username</label>
     <input ng-model="review.user_name"
            type="text"
-           class="form-control">
+           class="form-control"
+           disabled>
 </div>
 <div class="form-group">
     <label>Review</label>
